--- a/Views/Booking/AddVehicle.cshtml
+++ b/Views/Booking/AddVehicle.cshtml
@@ -5,73 +5,68 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="container mt-4">
-    <h2>Add New Vehicle</h2>
-    <hr />
+<link href="~/Content/Manage.css" rel="stylesheet" />
 
-    @using (Html.BeginForm("AddVehicle", "Booking", FormMethod.Post, new { @class = "form-horizontal", role = "form", enctype = "multipart/form-data" }))
-    {
-        @Html.AntiForgeryToken()
+<div class="container mt-5">
+    <div class="management-card mx-auto" style="max-width: 700px;">
+        <div class="text-center mb-4">
+            <h2>Add New Vehicle</h2>
+            <hr />
+        </div>
 
-        <div class="form-group row">
-            @Html.LabelFor(model => model.vehicleImage, htmlAttributes: new { @class = "col-md-2 col-form-label" })
-            <div class="col-md-10">
-                <input type="file" id="vehicleImageFile" class="form-control-file" accept="image/*" />
+        @using (Html.BeginForm("AddVehicle", "Booking", FormMethod.Post, new { @class = "form-horizontal", role = "form", enctype = "multipart/form-data" }))
+        {
+            @Html.AntiForgeryToken()
+
+            <div class="mb-3">
+                <label class="form-label" for="vehicleImageFile">Vehicle Image</label>
+                <input type="file" id="vehicleImageFile" class="form-control" accept="image/*" />
                 @Html.HiddenFor(model => model.vehicleImage)
-                <div id="imagePreview" class="mt-2" style="max-width: 150px;"></div>
+                <div id="imagePreview" class="mt-2"></div>
                 @Html.ValidationMessageFor(model => model.vehicleImage, "", new { @class = "text-danger" })
             </div>
-        </div>
 
-        <div class="form-group row">
-            @Html.LabelFor(model => model.vehicleType, htmlAttributes: new { @class = "col-md-2 col-form-label" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.vehicleType, new { htmlAttributes = new { @class = "form-control", placeholder = "Enter vehicle type" } })
+            <div class="mb-3">
+                <label class="form-label" for="vehicleType">Vehicle Type</label>
+                @Html.TextBoxFor(model => model.vehicleType, new { @class = "form-control", id = "vehicleType", placeholder = "Enter vehicle type" })
                 @Html.ValidationMessageFor(model => model.vehicleType, "", new { @class = "text-danger" })
             </div>
-        </div>
 
-        <div class="form-group row">
-            @Html.LabelFor(model => model.vehicleRegistration, htmlAttributes: new { @class = "col-md-2 col-form-label" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.vehicleRegistration, new { htmlAttributes = new { @class = "form-control", placeholder = "Enter registration" } })
+            <div class="mb-3">
+                <label class="form-label" for="vehicleRegistration">Registration</label>
+                @Html.TextBoxFor(model => model.vehicleRegistration, new { @class = "form-control", id = "vehicleRegistration", placeholder = "Enter registration" })
                 @Html.ValidationMessageFor(model => model.vehicleRegistration, "", new { @class = "text-danger" })
             </div>
-        </div>
 
-        <div class="form-group row">
-            @Html.LabelFor(model => model.vehicleServiceType, htmlAttributes: new { @class = "col-md-2 col-form-label" })
-            <div class="col-md-10">
+            <div class="mb-4">
+                <label class="form-label" for="vehicleServiceType">Service Type</label>
                 @Html.DropDownListFor(model => model.vehicleServiceType,
                     new SelectList(HomeworkAssignment1.Models.Services.serviceTypes),
                     "Select Service Type",
-                    new { @class = "form-control" })
+                    new { @class = "form-control", id = "vehicleServiceType" })
                 @Html.ValidationMessageFor(model => model.vehicleServiceType, "", new { @class = "text-danger" })
             </div>
-        </div>
 
-        <div class="form-group row">
-            <div class="col-md-offset-2 col-md-10">
-                <button type="submit" class="btn btn-success mr-2">
-                    <i class="fas fa-plus"></i> Add Vehicle
-                </button>
-                <a href="@Url.Action("ManagePage", "Booking")" class="btn btn-secondary">
+            <div class="d-flex justify-content-between">
+                <a href="@Url.Action("ManagePage", "Booking")" class="btn btn-secondary rounded-pill px-4">
                     <i class="fas fa-times"></i> Cancel
                 </a>
+                <button type="submit" class="btn btn-success rounded-pill px-4">
+                    <i class="fas fa-plus"></i> Add Vehicle
+                </button>
             </div>
-        </div>
-    }
+        }
+    </div>
 </div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
     <script>
         $(document).ready(function () {
-            // Image preview and conversion
             $('#vehicleImageFile').change(function () {
                 const file = this.files[0];
                 if (file) {
-                    if (file.size > 500000) { // 500KB limit
+                    if (file.size > 500000) {
                         alert('Image size should be less than 500KB');
                         $(this).val('');
                         return;
@@ -79,11 +74,9 @@
 
                     const reader = new FileReader();
                     reader.onload = function (e) {
-                        // Display preview
-                        $('#imagePreview').html(`<img src="${e.target.result}" class="img-thumbnail" />`);
-                        // Store base64 in hidden field
+                        $('#imagePreview').html(`<img src="${e.target.result}" style="width: 80px; height: 80px; object-fit: cover; border-radius: 6px;" />`);
                         $('#vehicleImage').val(e.target.result);
-                    }
+                    };
                     reader.readAsDataURL(file);
                 } else {
                     $('#imagePreview').html('');
