--- a/Views/Booking/EditDriver.cshtml
+++ b/Views/Booking/EditDriver.cshtml
@@ -5,22 +5,33 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="container mt-4">
-    <h2>Edit Driver</h2>
-    <hr />
+<link href="~/Content/Manage.css" rel="stylesheet" />
 
-    @using (Html.BeginForm("SaveDriver", "Booking", FormMethod.Post, new { @class = "form-horizontal", role = "form", enctype = "multipart/form-data", id = "editDriverForm" }))
-    {
-        @Html.AntiForgeryToken()
-        @Html.HiddenFor(model => model.driverID)
-        @Html.Hidden("isFromLocalStorage", true)
+<div class="container mt-5">
+    <div class="management-card mx-auto" style="max-width: 700px;">
+        <div class="text-center mb-4">
+            <img src="~/Images/HLogo.jpg" alt="Logo" class="title-icon mb-2" />
+            <h2>Edit Driver</h2>
+            <hr />
+        </div>
 
-        <div class="form-group row">
-            @Html.LabelFor(model => model.driverImage, htmlAttributes: new { @class = "col-md-2 col-form-label" })
-            <div class="col-md-10">
-                <input type="file" id="driverImageFile" class="form-control-file" accept="image/*" />
+        @using (Html.BeginForm("SaveDriver", "Booking", FormMethod.Post, new
+        {
+            @class = "form-horizontal",
+            role = "form",
+            enctype = "multipart/form-data",
+            id = "editDriverForm"
+        }))
+        {
+            @Html.AntiForgeryToken()
+            @Html.HiddenFor(model => model.driverID)
+            @Html.Hidden("isFromLocalStorage", true)
+
+            <div class="mb-3">
+                <label class="form-label" for="driverImageFile">Driver Image</label>
+                <input type="file" id="driverImageFile" class="form-control" accept="image/*" />
                 @Html.HiddenFor(model => model.driverImage, new { id = "driverImage" })
-                <div id="imagePreview" class="mt-2" style="max-width: 150px;">
+                <div id="imagePreview" class="mt-2">
                     @if (!string.IsNullOrEmpty(Model.driverImage))
                     {
                         <img src="@Model.driverImage" class="img-thumbnail" />
@@ -28,55 +39,46 @@
                 </div>
                 @Html.ValidationMessageFor(model => model.driverImage, "", new { @class = "text-danger" })
             </div>
-        </div>
 
-        <div class="form-group row">
-            @Html.LabelFor(model => model.driverFirstName, htmlAttributes: new { @class = "col-md-2 col-form-label" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.driverFirstName, new { htmlAttributes = new { @class = "form-control", id = "driverFirstName" } })
+            <div class="mb-3">
+                <label class="form-label" for="driverFirstName">First Name</label>
+                @Html.TextBoxFor(model => model.driverFirstName, new { @class = "form-control", id = "driverFirstName" })
                 @Html.ValidationMessageFor(model => model.driverFirstName, "", new { @class = "text-danger" })
             </div>
-        </div>
 
-        <div class="form-group row">
-            @Html.LabelFor(model => model.driverLastName, htmlAttributes: new { @class = "col-md-2 col-form-label" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.driverLastName, new { htmlAttributes = new { @class = "form-control", id = "driverLastName" } })
+            <div class="mb-3">
+                <label class="form-label" for="driverLastName">Last Name</label>
+                @Html.TextBoxFor(model => model.driverLastName, new { @class = "form-control", id = "driverLastName" })
                 @Html.ValidationMessageFor(model => model.driverLastName, "", new { @class = "text-danger" })
             </div>
-        </div>
 
-        <div class="form-group row">
-            @Html.LabelFor(model => model.driverPhoneNumber, htmlAttributes: new { @class = "col-md-2 col-form-label" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.driverPhoneNumber, new { htmlAttributes = new { @class = "form-control", id = "driverPhoneNumber" } })
+            <div class="mb-3">
+                <label class="form-label" for="driverPhoneNumber">Phone Number</label>
+                @Html.TextBoxFor(model => model.driverPhoneNumber, new { @class = "form-control", id = "driverPhoneNumber" })
                 @Html.ValidationMessageFor(model => model.driverPhoneNumber, "", new { @class = "text-danger" })
             </div>
-        </div>
 
-        <div class="form-group row">
-            @Html.LabelFor(model => model.driverServiceType, htmlAttributes: new { @class = "col-md-2 col-form-label" })
-            <div class="col-md-10">
+            <div class="mb-4">
+                <label class="form-label" for="driverServiceType">Service Type</label>
                 @Html.DropDownListFor(model => model.driverServiceType,
                     new SelectList(HomeworkAssignment1.Models.Services.serviceTypes),
                     "Select Service Type",
                     new { @class = "form-control", id = "driverServiceType" })
                 @Html.ValidationMessageFor(model => model.driverServiceType, "", new { @class = "text-danger" })
             </div>
-        </div>
 
-        <div class="form-group row">
-            <div class="col-md-offset-2 col-md-10">
-                <button type="submit" class="btn btn-primary">
-                    <i class="fas fa-save"></i> Save Changes
-                </button>
-                <a href="@Url.Action("ManagePage")" class="btn btn-secondary">
+            <div class="d-flex justify-content-between">
+                <a href="@Url.Action("ManagePage")" class="btn btn-secondary rounded-pill px-4">
                     <i class="fas fa-times"></i> Cancel
                 </a>
+                <button type="submit" class="btn btn-primary rounded-pill px-4">
+                    <i class="fas fa-save"></i> Save Changes
+                </button>
             </div>
-        </div>
-    }
+        }
+    </div>
 </div>
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
