--- a/Content/HomeStyle.css
+++ b/Content/HomeStyle.css
@@ -1,4 +1,8 @@
-﻿/* Content/site.css */
+﻿body {
+    background-color: #f5f7fa;
+    min-height: 100vh;
+}
+
 .navbar-brand {
     display: flex;
     align-items: center;
@@ -21,7 +25,7 @@
 
 .navbar {
     background-color: #2c3e50 !important;
-    height: 60px; /* Adjust as needed */
+    height: 60px;
     padding: 0;
 }
 
@@ -43,25 +47,19 @@
 }
 
 .top-left-quadrant {
-    background-color: #f5f7fa; /* Replace with your desired color */
+    background-color: #f5f7fa;
 }
 
-/* Bottom Right Quadrant */
 .bottom-right-quadrant {
-    background-color: #f5f7fa; /* Replace with your desired color */
+    background-color: #f5f7fa;
 }
 
 .btn-primary {
-    background-color: #3498db; /* Blue */
+    background-color: #3498db;
     border-color: #3498db;
     padding: 0.5rem 1.5rem;
     border-radius: 50px;
     margin: 0 auto;
     display: block;
     width: fit-content;
-}
-
-body {
-    background-color: #f5f7fa;
-    min-height: 100vh;
 }
